# MossRaven

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC-PHASE2.md  SPEC.md
.cargo/: config.toml
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: corpus.rs  cost.rs  features.rs  judge.rs  lib.rs  mutate.rs  tier3.rs  viability.rs
crates/core/tests/: item_ops.rs  tree_alloc.rs  weapon_swap.rs
crates/dreamer/: Cargo.toml
crates/dreamer/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/node-protocol/: Cargo.toml
crates/node-protocol/src/: lib.rs
crates/pob/: Cargo.toml  NOTICE
crates/pob/src/: gemdb.rs  headless.rs  lib.rs  parser.rs  test_support.rs  treedb.rs  uniquedb.rs
crates/pob/tests/: init_smoke.rs  parity.rs
crates/pob/tests/fixtures/: README.md
crates/surrogate/: Cargo.toml
crates/surrogate/src/: lib.rs  poe2_vocab.json  vocab.rs
deploy/: README.md
deploy/linux/: install.sh  mossraven-node.service
deploy/windows/: install-mossraven-node.ps1  uninstall-mossraven-node.ps1
docs/: HANDOFF-2026-06-10.md  claude-code-mcp-setup.md  nn-direction.md  pob-deepdive.md
installer/: MossRaven.iss
scripts/: KILL-AND-RERUN.cmd  RUN-VALIDATE-AND-DRUID.cmd  build-linux-node.sh  corpus-churn.ps1  extract-poe2-vocab.py  patch-luajit-msvc.ps1  pixel-probe.ps1  pull-pob-fixtures.py  run-druid-smoke.ps1  strip.bat  test-mcp-stdio.py  train-value-model.py  windows-validate.ps1
ui/: MossRaven.slnx
ui/MossRaven/: App.xaml  App.xaml.cs  ConceptHistoryWindow.xaml  ConceptHistoryWindow.xaml.cs  FinalistDetailWindow.xaml  FinalistDetailWindow.xaml.cs  MainWindow.Rework.cs  MainWindow.Tray.cs  MainWindow.xaml  MainWindow.xaml.cs  ModelSettingsWindow.xaml  ModelSettingsWindow.xaml.cs  MossRaven.csproj  app.manifest
ui/MossRaven/Services/: McpServiceClient.cs  PobBootstrap.cs  PobEmbedHost.cs  SettingsService.cs
ui/MossRaven/Themes/: Dark.xaml  Light.xaml
