[package]
name = "mossraven-node-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Wire types shared between mossraven-service and mossraven-node (Tier-3 remote backend)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
